--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,59 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>guicreator</groupId>
+
+    <groupId>fdgc.guicreator</groupId>
     <artifactId>fdGuiCreator</artifactId>
+    <version>0</version>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+
     <name>fdGuiCreator</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>21</maven.compiler.release>
+        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
     </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>23-ea+20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>23-ea+20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>23-ea+20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>23-ea+20</version>
+        </dependency>
+    </dependencies>
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <source>20</source>
-                    <target>20</target>
+                    <jlinkImageName>fdGuiCreator</jlinkImageName>
+                    <launcher>launcher</launcher>
+                    <mainClass>fdGuiCreator/fdgc.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -37,7 +73,7 @@
                     <shadedClassifierName>shaded</shadedClassifierName>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>guicreator.Main</mainClass>
+                            <mainClass>fdgc.Main</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
@@ -58,8 +94,7 @@
                             <jar>${project.build.directory}/${artifactId}-${version}-shaded.jar</jar>
                             <outfile>${project.build.directory}/fdGuiCreator.exe</outfile>
                             <classPath>
-                                <mainClass>guicreator.Main</mainClass>
-                                <preCp>anything</preCp>
+                                <mainClass>fdgc.Main</mainClass>
                             </classPath>
                             <jre>
                                 <minVersion>20</minVersion>
@@ -68,27 +103,54 @@
                             <versionInfo>
                                 <fileVersion>1.0.0.0</fileVersion>
                                 <txtFileVersion>1.0.0.0</txtFileVersion>
-                                <fileDescription>Aids developers in creating GUIs'</fileDescription>
-                                <copyright>2023 Fotoh</copyright>
+                                <fileDescription>Aids developers with the gui creation process.</fileDescription>
+                                <copyright>2024 Fotohh</copyright>
                                 <productVersion>1.0.0.0</productVersion>
                                 <txtProductVersion>1.0.0.0</txtProductVersion>
                                 <productName>fdGuiCreator</productName>
-                                <companyName/>
-                                <internalName/>
+                                <companyName>Fotohh</companyName>
+                                <internalName>Fotoh</internalName>
                                 <originalFilename>fdGuiCreator.exe</originalFilename>
                             </versionInfo>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>fdgc.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx</artifactId>
-            <version>23-ea+22</version>
-            <type>pom</type>
-        </dependency>
-    </dependencies>
+
+
 </project>
